fix: gap in header link

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -459,6 +459,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        gap: 8px;
         // padding: 22px 0;
         height: 61px;
         background: $colorWhite;
